# alg-2-labs

./: CMakeLists.txt  main.cpp
lab1/results/: данные_lab1.ods  отчет_lab1_Муштуков.odt
lab2/: README.md  graphs.ipynb
lab2/code/: abstract_solver.h  compressed_solver.h  main.cpp  seg_tree.h  solution1.h  solution2.h  solution3.h  table_results.h  test_generation.h  timing.h
lab2/code/solutions/: abstract_solver.h  compressed_solver.h  seg_tree.h  solution1.h  solution2.h  solution3.h
lab2/data/results/: result1024.txt  result128.txt  result131072.txt  result16.txt  result16384.txt  result2.txt  result2048.txt  result256.txt  result262144.txt  result32.txt  result32768.txt  result4.txt  result4096.txt  result512.txt  result524288.txt  result64.txt  result65536.txt  result8.txt  result8192.txt
lab2/data/tables/: table_map.csv  table_naive.csv  table_tree.csv
lab2/data/tests/: test1024.txt  test128.txt  test131072.txt  test16.txt  test16384.txt  test2.txt  test2048.txt  test256.txt  test32.txt  test32768.txt  test4.txt  test4096.txt  test512.txt  test64.txt  test65536.txt  test8.txt  test8192.txt
lab2/test/: test2.txt
results/: dat_alg.csv
